# piperun

./: README.md  pyproject.toml  ruff.toml
src/piperun/: __init__.py  pipeline.py  tasks.py
src/pyasp/: __init__.py  pipeline.py  shell.py
test/: test_pipeline.py  test_shell.py
