[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyasp"
version = "0.0.3"
description = ""
readme = "README.md"
authors = [{ name = "Francesco Ioli", email = "francesco.ioli@geo.uzh.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
requires-python = ">=3.11"
dependencies = [
    "numpy<=2.0",
    "matplotlib",
    "pandas",
    "opencv-python",
    "opencv-contrib-python",
    "rasterio",
    "pyproj",
    "tqdm",
    "xdem",
    "omegaconf",
    "pytransform3d",
    "dask[distributed]",
    "requests",
    "geopandas",
    "shapely",
    "seaborn",
    "graphviz",
]


[project.optional-dependencies]
dev = [
    "ruff",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
    "pytest-mock",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit",
]

[project.urls]
Homepage = "https://https://github.com/RSE-UZH/pyasp"

[tool.setuptools]
packages = ["pyasp"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pyasp/__init__.py" = ["{version}"]
