[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyasp"
version = "0.0.3"
description = "Python package for Ames Stereo Pipeline processing"
readme = "README.md"
authors = [{ name = "Francesco Ioli", email = "francesco.ioli@geo.uzh.ch" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ASP", "DEM", "photogrammetry", "stereo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<=2.0",
    "matplotlib",
    "pandas",
    "opencv-python",
    #"opencv-contrib-python",
    "rasterio",
    "pyproj",
    "tqdm",
    "xdem",
    "omegaconf",
    "pytransform3d",
    "dask[distributed]",
    "requests",
    "geopandas",
    "shapely",
    "seaborn",
    "graphviz",

]
[project.optional-dependencies]
asp_plot = ["asp_plot"]
dev = [
    "ruff",
    "bumpver",
    "pip-tools",
    "pytest",
    "pytest-mock",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit",
]
all = ["pyasp[asp_plot,dev]"]

[project.urls]
Homepage = "https://github.com/RSE-UZH/pyasp"
Documentation = "https://github.com/RSE-UZH/pyasp/"
Repository = "https://github.com/RSE-UZH/pyasp"


[tool.setuptools]
packages = ["pyasp"]

[tool.pytest.ini_options]
pythonpath = "pyasp"
addopts = ["--import-mode=importlib"]

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pyasp/__init__.py" = ["{version}"]
